--- a/notebooks/new-10kPBMC-SoupX.Rmd
+++ b/notebooks/new-10kPBMC-SoupX.Rmd
@@ -6,7 +6,7 @@ output: html_document
 This notebook shows how to remove ambient RNA counts from 10X expression matrix using [SoupX](https://cran.r-project.org/web/packages/SoupX/vignettes/pbmcTutorial.html) package. The following code installs packages that will be required for the analysis. Normally you would only run these commands if you don't have the packages installed. 
 
 ```{r}
-install.packages("SoupX")
+if (!require("SoupX")) install.packages("SoupX")
 ```
 
 Let's now load all the libraries that will be needed for the tutorial.
@@ -16,13 +16,12 @@ library(Seurat)
 library(SoupX)
 library(DropletUtils)
 library(ggplot2)
-library(DoubletFinder)
 library(knitr)
 ```
 
 In a common scenario, you start with the output of CellRanger or a similar tool. Here, we will download 10k of PBMC cells processed with CellRanger 4.0.0. CellRanger, STARsolo and other tools generate both raw and filtered matrices. The former contains empty droplets, while the latter is thought to contain mostly cells. Normally, filtered matrix is enough, but for ambient RNA removal we need both. 
 
-```{r}
+```{r eval=FALSE}
 download.file("https://cf.10xgenomics.com/samples/cell-exp/4.0.0/Parent_NGSC3_DI_PBMC/Parent_NGSC3_DI_PBMC_filtered_feature_bc_matrix.h5",
               destfile = "pbmc10k_filt.h5")
 download.file("https://cf.10xgenomics.com/samples/cell-exp/4.0.0/Parent_NGSC3_DI_PBMC/Parent_NGSC3_DI_PBMC_raw_feature_bc_matrix.h5",
@@ -32,8 +31,8 @@ download.file("https://cf.10xgenomics.com/samples/cell-exp/4.0.0/Parent_NGSC3_DI
 These are HDF5 data files, which is an efficient way to pack single cell expression matrices. Let's read them. Setting "use.names=F" will use Ensemble IDs instead of gene names for row identifiers. Few non-unique gene names are taken care of during the reading. 
 
 ```{r warning=FALSE}
-filt.matrix <- Read10X_h5("pbmc10k_filt.h5",use.names = T)
-raw.matrix  <- Read10X_h5("pbmc10k_raw.h5",use.names = T)
+filt.matrix <- Read10X_h5("../data/pbmc10k_filt.h5",use.names = T)
+raw.matrix  <- Read10X_h5("../data/pbmc10k_raw.h5",use.names = T)
 ```
 
 This results in two objects of dgCMatrix class. Filtered matrix contains droplets that contain putative cells, while raw matrix also includes empty droplets with ambient RNA (soup). We can explore them as follows: 
@@ -98,7 +97,7 @@ adj.matrix  <- adjustCounts(soup.channel, roundToInt = T)
 Finally, let's write the directory with corrected read counts. 
 
 ```{r}
-DropletUtils:::write10xCounts("soupX_pbmc10k_filt", adj.matrix)
+DropletUtils:::write10xCounts("soupX_pbmc10k_filt", adj.matrix, version = "3")
 ```
 
 This outputs the matrix of soup-corrected reads which we will use for all future analysis.
